@startuml
'https://plantuml.com/class-diagram

class TrackingInventory
{
    + main()
    + start()
}

class TrackingInventoryController
{
    - searchTextField : TextField
    - valueTextField : TextField
    - serialNumberTextField : TextField
    - nameTextField : TextField
    ..
    - InventoryTable: TableView
    - ValCol: TableColumn
    - SerialNumCol: TableColumn
    - NameCol: TableColumn
    ..
    bufferList : ObservableList
    filterList : FilteredList
    checker : testCheckers
    ..
    - index : int
    - totalIndex : int
    ==
    + removeItemClick()
    + addItemClick()
    + openSaveFileController()
    + itemSelectClick()
    ..
    - openNewWindow()
    - populateBuffer()
    - setTheCells()
    - searchbar()


}

class testCheckers
{
    + formateMoney()
    + valIsNumerical()
    + duplicateChecker()
    + commitDuplicateChecker()
    + nameLength()
    + alphaNumerical()
}

class WindowErrorController
{
    + WindowClickButton : Button
    ==
    + WindowClickClose()
}

class createInventory
{
    + constructors()
    + getters()
    + setter()
}

javafx.Application <|-- TrackingInventory

TrackingInventory - TrackingInventoryController
TrackingInventoryController - createInventory
TrackingInventoryController -- WindowErrorController
TrackingInventoryController -- testCheckers

@enduml